--- a/src/app/platform/components/rate-plans-modal/rate-plans-modal.component.html
+++ b/src/app/platform/components/rate-plans-modal/rate-plans-modal.component.html
@@ -3,6 +3,10 @@
     <span aria-hidden="true">×</span>
   </button>
 
+  <div class="modal-header">
+    <h2>Rate plans</h2>
+  </div>
+
   <table class="tb-rate-plans table table-hover">
 
     <thead>
