Clients, suppliers & accesses sorted

--- a/src/app/shared/components/selectors/client-selector/client-selector.component.html
+++ b/src/app/shared/components/selectors/client-selector/client-selector.component.html
@@ -2,7 +2,7 @@
   <label>
     <span i18n="@@client">Client</span>:</label>
   <select class="form-control" [(ngModel)]="clientSelected" name="clientSelected" (change)=onClientSelected()>
-    <option *ngFor="let client of clients" [value]="client.code">{{client.name}}</option>
+    <option *ngFor="let client of clients" [value]="client.code" [disabled]="!client.isActive">{{client.name}}</option>
   </select>
   <p *ngIf="showErrorClients" i18n="@@no-clients">There aren't clients available</p>
 </div>
