--- a/src/app/platform/components/header/header.component.html
+++ b/src/app/platform/components/header/header.component.html
@@ -54,10 +54,13 @@
         <a [routerLink]="['/home']"><img src="https://www.travelgatex.com/assets/img/logo_travelgatex_claim_white.svg" alt="TravelgateX"></a>
       </div>
       <div class="column log">
+        <div class="slack">
+            <a _ngcontent-c0="" href="https://slack.travelgatex.com" target="blank"><img _ngcontent-c0="" src="https://slack.travelgatex.com/badge.svg"></a>
+        </div>
         <b2b-lang-select [class]="'lang-platform'"></b2b-lang-select>
         <div class="mo-myaccount-header dropdown">
           <a class="dropdown-toggle" href="javascript: void(0);" id="dropdownProfile" data-toggle="dropdown"
-            aria-haspopup="true" aria-expanded="false" (click)="show = !show">
+            aria-haspopup="true" aria-expanded="false">
             <img src="{{profile?.picture}}" alt="" class="rounded-circle">
           </a>
           <!-- <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dropdownProfile">
@@ -78,7 +81,7 @@
               <span i18n="logout">Logout</span>
             </a>
           </div> -->
-          <div class="drop-down" *ngIf="show">
+          <div class="drop-down dropdown-menu" aria-labelledby="dropdownProfile">
             <div class="profile">
               <img src="{{profile?.picture}}" alt="" class="rounded-circle">
               <p>Welcome<br>{{profile?.name}}</p>
@@ -87,8 +90,8 @@
               <li><a [routerLink]="['/home']" [routerLinkActive]="['active']">Home</a></li>
               <li><a [routerLink]="['/platform/search-bookings']" [routerLinkActive]="['active']">Search</a></li>
               <li><a [routerLink]="['/platform/my-bookings']" [routerLinkActive]="['active']">My bookings</a></li>
-              <li><a class="log-out" (click)="authService.logout()">Logout</a>
-              </li>
+              <li class="lang-drop"><b2b-lang-select [class]="'lang-platform'"></b2b-lang-select></li>
+              <li><a class="log-out" (click)="authService.logout()">Logout</a></li>
             </ul>
           </div>
         </div>
