--- a/src/app/platform/pages/search-bookings/search-bookings.component.html
+++ b/src/app/platform/pages/search-bookings/search-bookings.component.html
@@ -1,7 +1,7 @@
 <b2b-header>
   <div class="container">
     <div class="row justify-content-center">
-      <div class="col-md-7">
+      <div class="col-xl-9 col-lg-10 col-md-10 col-sm-11 pb-5">
         <div class="mo-tit-section">
           <h4><span class="lnr lnr-magnifier"></span><strong i18n="@@availability" class="indentText">Availability</strong><span
               i18n="@@request" class="indentText">
