--- a/src/app/shared/components/alert-dropdown/alert-dropdown.component.html
+++ b/src/app/shared/components/alert-dropdown/alert-dropdown.component.html
@@ -5,7 +5,7 @@
   <i class="fa fa-exclamation-triangle"></i> {{warnings.length}}
 </button>
 <div class="alert-dropdown mb-3">
-  <div [@seeItems]="seeItems">
-    <b2b-simple-alert *ngFor="let item of items" (indexRemoved)="removeItems(item)" [title]="item.title" [type]="item.type" [message]="item.message"></b2b-simple-alert>
+  <div>
+    <b2b-simple-alert *ngFor="let item of getToggledItems()" (indexRemoved)="removeItems(item)" [title]="item.title" [type]="item.type" [message]="item.message"></b2b-simple-alert>
   </div>
 </div>
