--- a/src/app/platform/components/availability/availability.component.html
+++ b/src/app/platform/components/availability/availability.component.html
@@ -52,7 +52,7 @@
       <div class="col-md-4">
         <div class="form-group">
           <label i18n="@@date-from">Date from:</label>
-          <input style="background-color: white;" class="form-control" placeholder="YYYY-MM-DD" [minDate]="now" [maxDate]="criteria.checkOut" name="startDate" [(ngModel)]="criteria.checkIn"
+          <input style="background-color: white;" class="form-control" placeholder="YYYY-MM-DD" [minDate]="now" name="startDate" [(ngModel)]="criteria.checkIn"
             ngbDatepicker #sToggle="ngbDatepicker" (click)="sToggle.toggle(); eToggle.close();$event.stopPropagation()" (close)="eToggle.open()"
             (ngModelChange)="onChange(sToggle, eToggle)" (document:click)="decideIfClose($event, sToggle)" [disabled]="!accessesToSearch || accessesToSearch.length === 0 || !client"
             readonly>
@@ -62,7 +62,7 @@
         <div class="form-group">
           <label i18n="@@date-to">Date to:</label>
           <div class="input-group">
-            <input style="background-color: white;" class="form-control" placeholder="YYYY-MM-DD" [minDate]="criteria.checkIn" name="endDate"
+            <input style="background-color: white;" class="form-control" placeholder="YYYY-MM-DD" [minDate]="now" name="endDate"
               [(ngModel)]="criteria.checkOut" ngbDatepicker #eToggle="ngbDatepicker" (click)="eToggle.toggle(); sToggle.close();$event.stopPropagation()"
               (document:click)="decideIfClose($event, eToggle)" [disabled]="!accessesToSearch || accessesToSearch.length === 0 || !client"
               readonly>
