feat(b2b): Added changes from a commit from https://github.com/travelgateX/hotelX-angular-sample/commit/493cd0e193ac278e0288c6b206486cbca6c03a76

--- a/src/app/platform/components/header/header.component.html
+++ b/src/app/platform/components/header/header.component.html
@@ -17,6 +17,7 @@
         <div class="slack">
           <a _ngcontent-c0="" href="https://slack.travelgatex.com" target="blank"><img _ngcontent-c0="" src="https://slack.travelgatex.com/badge.svg"/></a>
         </div>
+        <b2b-organization-selector [class]="'organization-platform'"></b2b-organization-selector>
         <b2b-lang-select [class]="'lang-platform'"></b2b-lang-select>
         <div class="mo-myaccount-header dropdown">
           <a class="dropdown-toggle" href="javascript: void(0);" id="dropdownProfile" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
