refactor(b2b): Disabled selectors if there is only one option to select

--- a/src/app/platform/components/supplier-accesses/supplier-accesses.component.html
+++ b/src/app/platform/components/supplier-accesses/supplier-accesses.component.html
@@ -3,6 +3,7 @@
     <div class="form-group">
       <label> <span i18n="@@supplier">Supplier</span>:</label>
       <select
+        [disabled]="suppliers?.length === 1"
         class="form-control"
         [(ngModel)]="supplierSelected"
         name="supplierSelected"
