--- a/src/app/shared/components/selectors/client-selector/client-selector.component.html
+++ b/src/app/shared/components/selectors/client-selector/client-selector.component.html
@@ -1,7 +1,7 @@
 <div class="form-group">
   <label>
     <span i18n="@@client">Client</span>:</label>
-  <select [disabled]="clients?.length === 1" class="form-control" [(ngModel)]="clientSelected" name="clientSelected" (change)=onClientSelected()>
+  <select class="form-control" [(ngModel)]="clientSelected" name="clientSelected" (change)=onClientSelected()>
     <option *ngFor="let client of clients" [value]="client.code" [disabled]="!client.isActive">{{client.name}}</option>
   </select>
   <p *ngIf="showErrorClients" i18n="@@no-clients">There aren't clients available</p>
