fix(no-org modal): Changed message

--- a/src/app/platform/components/no-organization-modal/no-organization-modal.component.html
+++ b/src/app/platform/components/no-organization-modal/no-organization-modal.component.html
@@ -2,7 +2,7 @@
   <h5 class="modal-title font-weight-bold">Error loading organizatons</h5>
 </div>
 <div class="modal-body">
-    <p>There was an error while loading organizations. Please, contact us</p>
+    <p>There was an error while loading organizations. Please, contact our support</p>
 </div>
 <div class="modal-footer">
   <button type="submit" class="btn btn-primary" (click)="activeModal.close()">Close</button>
