--- a/src/app/shared/components/selectors/organization-selector/organization-selector.component.html
+++ b/src/app/shared/components/selectors/organization-selector/organization-selector.component.html
@@ -10,7 +10,7 @@
     </div>
     <hr>
     <div class="container-organization-navbar">
-      <a *ngFor="let organization of organizations" class="dropdown-item" (click)="setOrganization($event)" [innerHTML]="organization | highlight: filter"></a>
+      <a *ngFor="let organization of organizations" class="dropdown-item" (click)="setOrganization(organization)" [innerHTML]="organization | highlight: filter"></a>
     </div>
   </div>
 </div>
