--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -1,14 +1,13 @@
 <footer class="mo-footer">
   <div class="container">
-    <div class="col-sm-12 ul-footer">
+    <!-- <div class="col-sm-12 ul-footer">
       <ul class="text-center list-inline">
         <li class="list-inline-item"><a appScroll [height]="75" class="smooth-scroll" href="#about-us" i18n="@@about">About us</a></li>
         <li class="list-inline-item"><a appScroll class="smooth-scroll" href="#our-products" i18n="@@our-products">Our Products</a></li>
         <li class="list-inline-item"><a href="http://docs.travelgatex.com/hotelx/quickstart/" target="_blank" i18n="@@xml-api">travelgateX's API</a></li>
-        <!-- TODO email por organizacion -->
         <li class="list-inline-item"><a href="mailto:info@xmltravelgate.com?subject=Contact%20from%20web" target="_top" i18n="@@contact-us">Contact us</a></li>
       </ul>
-    </div>
+    </div> -->
     <div class="col-sm-12">
       <!--<p class="text-center">Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis.
         Fusce condimentum nunc ac nisi vulputate fringilla.</p>-->
