--- a/src/app/static/components/home/home.component.html
+++ b/src/app/static/components/home/home.component.html
@@ -70,125 +70,15 @@
     </div>
 
     <div class="row mo-aboutus-subtitle">
-      <div class="col-xs-12 col-md-6">
+      <div class="col-xs-12 col-md-12">
         <h4 class="tit text-center" i18n="@@about-p-1">Know more about us</h4>
         <p class="subtit text-center" i18n="@@about-p-2">Travelgatex is dedicated 100% to the integrations of the different touristic providers, be it hotels, flights, ferries,
           trains, rental cars and transfers.</p>
-      </div>
-      <div class="col-xs-12 col-md-6">
-        <h4 class="tit text-center" i18n="@@about-p-3">Travel product available in one single connection</h4>
-        <p class="subtit text-center" i18n="@@about-p-4">Travelgatex has the most extensive product on the market. More than 800,000 hotels, both directly contracted and
-          more than 600 suppliers.</p>
+          <p class="subtit text-center" i18n="@@about-p-4">Travelgatex has the most extensive product on the market. More than 800,000 hotels, both directly contracted and
+            more than 600 suppliers.</p>
       </div>
     </div>
   </div>
-</div>
-
-<div class="mo-transition products parallax-window-transition-why-travelgatex" id="why-travelgatex">
-  <div class="overlay"></div>
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-12">
-        <h2 class="tit text-center" i18n="@@service-title">Why Travelgatex?</h2>
-      </div>
-    </div>
-  </div>
-  <div class="iso-deco-triangles"></div>
-</div>
-
-<div class="mo-aboutus">
-  <div class="container">
-    <div class="row">
-      <div class="about-us">
-        <div class="first-row-about-us">
-          <div class="row">
-            <div class="col-md-12">
-              <div class="secondary">
-                <img class="img-responsive ico-technology" src="assets/img/techno-icon.svg" alt="ico technology">
-                <h5 class="tit text-center" i18n="@@service-2-title">Advanced technology</h5>
-                <p class="desc text-center" i18n="@@service-2-subtitle">We use the latest technology to offer 800,000 hotels in a single XML connection with a response time of less
-                  than 1 second.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="second-row-about-us">
-          <div class="row">
-            <div class="col-md-6">
-              <div class="secondary">
-                <img class="img-responsive ico-suppliers" src="assets/img/suppliers-icon.svg" alt="ico suppliers">
-                <h5 class="tit text-center" i18n="@@service-3-title">More than 600 suppliers</h5>
-                <p class="desc text-center" i18n="@@service-3-subtitle">We add the options of all our suppliers to offer you the best available option in less time.</p>
-              </div>
-            </div>
-            <div class="col-md-6">
-              <div class="secondary">
-                <img class="img-responsive ico-location" src="assets/img/location-icon.svg" alt="ico location">
-                <h5 class="tit text-center" i18n="@@service-4-title">Free mapping services</h5>
-                <p class="desc text-center" i18n="@@service-4-subtitle">Our mapping tool will help you prioritize the hotels you already have in your system and will also propose
-                  others to expand your product.</p>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-
-<div class="mo-transition products parallax-window-transition-products" id="our-products">
-  <div class="overlay"></div>
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-12">
-        <h2 class="tit text-center" i18n="@@product-title">Learn about our products</h2>
-      </div>
-    </div>
-  </div>
-  <div class="iso-deco-triangles"></div>
-</div>
-
-<div class="mo-products">
-  <div class="container">
-
-
-    <div class="row">
-      <div class="col-lg-3">
-        <img src="assets/img/products-flights.svg" class="product" alt="flights">
-        <h4 class="tit text-center" i18n="@@flight-title">Flights</h4>
-        <p class="desc text-center" i18n="@@flight-subtitlt">XML integration with different GDS and LowCost Platforms such as Amadeus, Travelport, Sabre, Travelfusion and HitchHiker.</p>
-      </div>
-      <div class="col-lg-3">
-        <img src="assets/img/products-packages.svg" class="product" alt="packages">
-        <h4 class="tit text-center" i18n="@@packages">Packages</h4>
-        <p class="desc text-center" i18n="@@package-subtitle">Tailor made dynamic packages on XML.</p>
-      </div>
-      <div class="col-lg-3">
-        <img src="assets/img/products-transfers.svg" class="product" alt="transfers">
-        <h4 class="tit text-center" i18n="@@transfer-title">Transfers</h4>
-        <p class="desc text-center" i18n="@@transfer-subtitle">Worldwide private or shared transfers.</p>
-      </div>
-      <div class="col-lg-3">
-        <img src="assets/img/products-activities.svg" class="product" alt="activities">
-        <h4 class="tit text-center" i18n="@@activity-title">Activities</h4>
-        <p class="desc text-center" i18n="@@activity-subtitle">Activities in more than 4.000 destinations worldwide including theme parks, museums, guided tours, tickets, sport
-          events, restaurants and many more...</p>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-<div class="mo-transition getconnected parallax-window-transition-getconnected">
-  <div class="overlay"></div>
-  <div class="container">
-    <div class="row">
-      <div class="col-sm-12">
-        <h2 class="tit text-center" i18n="@@connect">Let's get connected</h2>
-      </div>
-    </div>
-  </div>
-  <div class="iso-deco-triangles"></div>
 </div>
 
 <div class="mo-getconnected" id="get-connected">
@@ -234,7 +124,7 @@
         </div>
       </div>
     </div>
-    <div class="workwithus">
+    <!-- <div class="workwithus">
       <div class="row">
         <div class="col-sm-12">
           <div class="media media-smy">
@@ -254,7 +144,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
   </div>
 </div>
 
