--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -6,7 +6,8 @@
         <li class="list-inline-item"><a appScroll class="smooth-scroll" href="#our-products" i18n="@@our-products">Our Products</a></li>
         <li class="list-inline-item"><a href="http://docs.travelgatex.com/hotelx/quickstart/" target="_blank" i18n="@@xml-api">travelgateX's API</a></li>
         <!-- TODO email por organizacion -->
-        <li class="list-inline-item"><a href="mailto:info@xmltravelgate.com?subject=Contact%20from%20web" target="_top" i18n="@@contact-us">Contact us</a></li>
+        <li class="list-inline-item"><a href="mailto:sales@traveltino.com?subject=Contact%20from%20web" target="_top" i18n="@@contact-us">Contact us</a></li>
+        <li class="list-inline-item" (click)="downloadTerms"><a (click)="downloadTerms()" href="javascript:void(0)" target="_blank" i18n="@@terms-conditions">Terms & Conditions</a></li>
       </ul>
     </div>
     <div class="col-sm-12">
